# suzuran

./: .dockerignore  .env.example  .gitignore  .impeccable.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml
docs/: VERSIONING.md
docs/plans/: 2026-04-16-suzuran-design.md  2026-04-17-phase1-1-scaffold.md  2026-04-17-phase1-10-ui-shell.md  2026-04-17-phase1-2-migrations.md  2026-04-17-phase1-3-dal.md  2026-04-17-phase1-4-auth-password.md  2026-04-17-phase1-5-auth-2fa.md  2026-04-17-phase1-6-settings-theming.md  2026-04-17-phase1-7-libraries-tagger-scanner.md  2026-04-17-phase1-8-job-scheduler.md  2026-04-17-phase1-9-streaming.md  2026-04-18-phase2-organization.md  2026-04-19-phase3-musicbrainz.md  2026-04-20-phase4-transcoding-art.md  2026-04-21-design-gap-analysis.md  2026-04-21-library-ingest-redesign-impl.md  2026-04-21-library-ingest-redesign.md  2026-04-23-library-selection-bulk-edit.md  2026-04-24-library-navigation-issues.md  2026-04-24-library-view-persistence-and-columns.md  2026-04-25-ingest-flow-redesign.md
docs/summaries/: 2026-04-21-bug-fixes-feedback.md  2026-04-21-embedded-art-rate-limiting.md  2026-04-21-ingest-supersede.md  2026-04-21-library-ingest-redesign-impl.md  2026-04-21-mbp-release-matching-and-ui.md  2026-04-23-library-selection-bulk-edit.md  2026-04-23-library-ux-round2.md  2026-04-24-library-navigation-suggestions-maintenance.md  2026-04-24-library-view-persistence-columns.md  2026-04-24-mb-fix-delete-tracks-and-ui.md  2026-04-25-album-art-and-ui-improvements.md  2026-04-25-art-edit-panel-upload-resize.md  2026-04-25-ingest-flow-redesign.md  2026-04-25-ingest-library-improvements.md  2026-04-26-library-track-edits-and-cleanup.md
migrations/postgres/: 0001_users.sql  0002_two_factor.sql  0003_settings_themes.sql  0004_libraries.sql  0005_tracks.sql  0006_jobs.sql  0007_webauthn_challenge_uq.sql  0008_organization_rules.sql  0009_tag_suggestions.sql  0010_jobs_add_freedb_lookup.sql  0011_encoding_profiles.sql  0012_art_profiles.sql  (+25 more)
scripts/: setup-dev-hooks.sh
secrets/: README.md
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
tasks/: codebase-filemap.md  lessons.md  pending-tasks.md
tests/: art_api.rs  art_process_job.rs  art_profiles_api.rs  art_profiles_dal.rs  auth.rs  cue_parser.rs  cue_split_job.rs  encoding_profiles_api.rs  encoding_profiles_dal.rs  fingerprint_job.rs  freedb_lookup_job.rs  freedb_service.rs  health.rs  library_profiles_api.rs  mb_lookup_job.rs  musicbrainz_service.rs  normalize_job.rs  organization_rules.rs  organization_rules_api.rs  organize_job.rs  organizer_conditions.rs  organizer_template.rs  process_staged_job.rs  scanner.rs  scanner_extended_formats.rs  scheduler.rs  settings.rs  streaming.rs  tag_suggestions_api.rs  tag_suggestions_dal.rs  tagging_service.rs  totp.rs  track_links_dal.rs  tracks_meta_api.rs  transcode_api.rs  transcode_compat.rs  transcode_job.rs  uploads_api.rs  virtual_libraries_api.rs  virtual_libraries_dal.rs  (+1 more)
ui/: index.html  package-lock.json  package.json  tailwind.config.ts
(+165 files in other folders)
