[package]
name = "suzuran-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "suzuran-server"
path = "src/main.rs"

[lib]
name = "suzuran_server"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dotenvy = "0.15"
thiserror = "1"
async-trait = "0.1"

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "sqlite",
    "migrate",
    "chrono",
    "json",
] }

chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

# Auth (used in Phase 1.4+; declared here to avoid Cargo churn)
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
base64 = "0.22"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
