[package]
name = "suzuran-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "suzuran-server"
path = "src/main.rs"

[lib]
name = "suzuran_server"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dotenvy = "0.15"
thiserror = "1"
async-trait = "0.1"

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "sqlite",
    "migrate",
    "chrono",
    "json",
] }

chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
sha2 = "0.10"
hex = "0.4"

# Media
lofty = "0.21"
walkdir = "2"
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }

# Auth
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
base64 = "0.22"

# 2FA
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
uuid = { version = "1", features = ["v4"] }
url = "2"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
tempfile = "3"
